generator/css/ui.css
#preview-container {
    margin: 10px;
/*     display: flex; */
    justify-content: space-around;
    align-items: center;
}

/* Small screen (preview fills all columns) */
@media (max-width : 1199px) {
    .preview-container {
        flex-direction: row;
    }
    .card {
        margin-right: 10px;
    }
}
/* Large screen (preview fills one column, columns are narrow) */
@media (min-width: 1200px) and (max-width : 1599px) {
    .preview-container {
        flex-direction: column;
    }
    .card {
        margin-bottom: 10px;
    }
}
/* Huge screen (preview fills one column, columns are wide) */
@media (min-width : 1600px) {
    .preview-container {
        flex-direction: row;
    }
    .card {
        margin-right: 10px;
    }
}

.row-eq-height {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display:         flex;
}

.color-input-addon {
    border-right: 0;
    border-radius: 4px !important;
    border-top-right-radius: 0 !important;
    border-bottom-right-radius: 0 !important;
}

.form-group {
    margin-bottom: 10px;
}

.card h4 {
    /* Revert bootstrap style for the card preview */
    font-weight: bold;
}

.form-horizontal {
    margin-top: 10px;
}

.drawer {
	overflow:hidden;
} 
.drawer-collapse {
	position:relative;
}

.drawer-tab{
	float:right;
	height:500px;
	background-color:red;
}

.drawer-collapse, .drawer-tab{
	width:15px; 
}


.popover { 
	max-width: 100%;
}

.avail-elements-table td {
	vertical-align:top;
}
.avail-elements-table td {
	padding:  2px 5px;
}

.avail-elements-table tr:nth-child(odd) {
	background-color:RGB(230, 230, 230);
	
}

.avail-elements-table tr td:first-child {
	font-weight:bold;
}
		
div.dark {
	background-color: lightgray;
}		

.header {
	height: 5%;
}

.page-body {
	height:90%;
}

html, body {
    height: 100%;
	background-color:lightblue; 
}
.fillw, .fill {
   width:100%;
   min-width:100%;
}
.fillh, .fill { 
    min-height: 100%;
    height: 100%;
}


.card-contents-expanded {
	position:relative;
	top:10px;
}

